# skurvene-morciatka

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  README_AI.md  cmake_install.cmake  dennik.txt  imgui.ini  main.cpp
compiled/: morciatko_11  morciatko_old_10  morciatko_old_12  morciatko_old_4  morciatko_old_6  morciatko_old_8  morciatko_old_9
docs/: store_structure_redesign_minecraft_style.md
include/: GLOBALS.hpp
include/engine/: camera.hpp  chunk.hpp  controls.hpp  entity.hpp  grid.hpp  particle.hpp  particle_movement.hpp  particles.hpp  physics_formulas.hpp  renderer.hpp  text_renderer.hpp  time_manager.hpp  world.hpp
include/engine/audio/: audio_buffer.hpp  audio_manager.hpp  audio_source.hpp  listener.hpp
include/engine/particle/: falling_sand_simulation.hpp  particle.hpp  particle_density.hpp  particle_mass.hpp  particle_movement.hpp  particle_velocity.hpp
include/engine/player/: entity.hpp  entity_manager.hpp  inventory.hpp  item.hpp  sprite_animation.hpp  wand.hpp
include/engine/renderer/: buffer.hpp  compute_shader.hpp  debug_renderer.hpp  entities_renderer.hpp  interface_renderer.hpp  renderer.hpp  shader.hpp  text_renderer.hpp  texture.hpp  ui_renderer.hpp  world_renderer.hpp
include/engine/renderer/buffers/: buffer.hpp  element_array_object.hpp  shader_storage_buffer_object.hpp  vertex_array_object.hpp  vertex_buffer_object.hpp
include/engine/world/: herringbone_world_generation.hpp  interface_world.hpp  structure.hpp  world.hpp  world_biomes.hpp  world_ca_generation.hpp  world_cell.hpp  world_cell_gpu.hpp  world_chunk.hpp
include/glad/: gl.h
include/others/: GLOBALS.hpp  utils.hpp
shaders/: compute_shader.glsl  fragment.glsl  text_texture.glsl  text_vertex.glsl  vertex.glsl
shaders/compute/: README.md  compute_calculate_vertices.glsl  compute_fragment.glsl  compute_vertex.glsl
shaders/entity/: entity_fragment.glsl  entity_vertex.glsl
src/: audio_manager.cpp  camera.cpp  controls.cpp  entity.cpp  main.cpp  particle.cpp  physics_formulas.cpp  renderer.cpp  time_manager.cpp  utils.cpp  world.cpp
src/audio/: audio_buffer.cpp  audio_manager.cpp  audio_source.cpp  listener.cpp
src/particle/: README.md  falling_sand_simulation.cpp  particle.cpp  particle_density.cpp  particle_mass.cpp  particle_movement.cpp  particle_velocity.cpp
src/player/: entity.cpp  entity_manager.cpp  sprite_animation.cpp
src/renderer/: buffer.cpp  compute_shader.cpp  entities_renderer.cpp  renderer.cpp  shader.cpp  text_renderer.cpp  ui_renderer.cpp  world_renderer.cpp
src/renderer/buffers/: buffer.cpp  element_array_object.cpp  shader_storage_buffer_object.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp
src/world/: README.md  herringbone_world_generation.cpp  interface_world.cpp  structure.cpp  world.cpp  world_ca_generation.cpp  world_cell.cpp  world_chunk.cpp
structure_images/: README.md
tests/: README.md
tests/integration/: devushki_spawn_test.cpp  structure_spawn_rules_test.cpp
tests/unit/: boss_spawn_radius_test.cpp  falling_sand_test.cpp  gun_projectile_test.cpp  particle_test.cpp  spawn_biome_restriction_test.cpp  structure_test.cpp  utils_test.cpp  world_test.cpp
